--- a/app.ipynb
+++ b/app.ipynb
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1425,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,12 +1540,12 @@
     "        sous_groupes = re.split(pattern_combined, groupe)\n",
     "        groupes_fins.extend(sous_groupes)\n",
     "\n",
-    "    return [groupe.strip() for groupe in groupes_fins if groupe is not None and groupe.strip() and groupe.strip() not in ['.', ',', 'mais', 'ou', 'et', 'donc', 'or', 'ni', 'car']]"
+    "    return [groupe.strip() for groupe in groupes_fins if groupe is not None and groupe.strip() and len(groupe.strip()) > 6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1606,7 @@
     "            continue\n",
     "        if score >= 3.5:\n",
     "            pos_list.append((groupe, sumFreq))\n",
-    "        elif score <= 1.5:\n",
+    "        elif score <= 2.5:\n",
     "            neg_list.append((groupe, sumFreq))\n",
     "\n",
     "    pos_list = [sentence[0] for sentence in sorted(pos_list, key=lambda x: x[1], reverse=True)[:top]]\n",
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1664,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,36 +1684,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\courn\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\courn\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: Récupération de la voiture chez aramis aix en Provence ,à la réception constat d’une grosse tache de cambouis sur le dossier du siège passager,propreté très moyenne du véhicule avec l’horloge de la voiture pas à l’heure, ce qui laisse imaginer une préparation bâclée\n",
-      "Vrai score: 3\n",
-      "Score: 2.2085043105238635\n",
-      "Séquences positives: []\n",
+      "Query: Large choix de véhiculeContact agréable et conseils pertinents\n",
+      "Vrai score: 5\n",
+      "Score: 3.950550432383693\n",
+      "Séquences positives: ['Large choix de véhiculeContact agréable', 'conseils pertinents']\n",
       "Séquences négatives: []\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\courn\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -1728,6 +1710,60 @@
     "print(f\"Score: {score[0]}\")\n",
     "print(f\"Séquences positives: {pos_list}\")\n",
     "print(f\"Séquences négatives: {neg_list}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute the average error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 608/608 [08:48<00:00,  1.15it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 0.7062562396006655\n",
+      "MSE: 0.7578698835274542\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ratings_val = []\n",
+    "exception_idx = []\n",
+    "for i in tqdm(range(len(test))):\n",
+    "    try:\n",
+    "        elmt = test.iloc[i]\n",
+    "        origin_query = elmt[\"review_text\"]\n",
+    "        score = estimate_score(getTopDocs(bm25, text2Token(origin_query), documents, ratings), origin_query)\n",
+    "        ratings_val.append(score[0])\n",
+    "    except:\n",
+    "        exception_idx.append(i)\n",
+    "        continue\n",
+    "\n",
+    "test_sucess = test.drop(exception_idx)\n",
+    "\n",
+    "print(f\"MAE: {mean_absolute_error(test_sucess['review_rating'], ratings_val)}\")\n",
+    "print(f\"MSE: {mean_squared_error(test_sucess['review_rating'], ratings_val)}\")"
    ]
   }
  ],
