--- a/app.ipynb
+++ b/app.ipynb
@@ -45,7 +45,29 @@
     "from xgboost import XGBRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "import pickle\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Warning Shown\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ignore warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "warnings.warn(\"DelftStack\")\n",
+    "warnings.warn(\"Do not show this message\")\n",
+    "print(\"No Warning Shown\")"
    ]
   },
   {
@@ -213,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,17 +247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\courn\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-      "\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -273,7 +287,7 @@
     "\n",
     "n_grams = lambda tokens, n: [\" \".join(tokens[i:i+n]) for i in range(len(tokens)-n+1)]\n",
     "\n",
-    "def text2Token(text, spelling = True, stem = True, len_word_min = 2, spell = spell, useless_words = useless_words):\n",
+    "def text2Token(text, spelling = True, stem = True, len_word_min = 2, spell = spell, useless_words = useless_words, use_n_grams = True):\n",
     "    stopword = stopwords.words('french')\n",
     "    word_tokens = preprocess_text(text)\n",
     "    word_tokens = [word for word in word_tokens if word not in stopword and word not in useless_words and len(word) > len_word_min]\n",
@@ -282,8 +296,9 @@
     "        word_tokens = [word for word in word_tokens if word != None]\n",
     "    if stem:\n",
     "        word_tokens = [STEMMER.stem(token) for token in word_tokens]\n",
-    "    word_tokens_with_n_grams = word_tokens + n_grams(word_tokens, 2) + n_grams(word_tokens, 3)\n",
-    "    return word_tokens_with_n_grams\n",
+    "    if use_n_grams:\n",
+    "        word_tokens = word_tokens + n_grams(word_tokens, 2) + n_grams(word_tokens, 3)\n",
+    "    return word_tokens\n",
     "\n",
     "def getMostFrequentWords(documents, top=10):\n",
     "    # Compter les mots\n",
@@ -475,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1410,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1440,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1578,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1617,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1679,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,17 +1699,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: Large choix de véhiculeContact agréable et conseils pertinents\n",
-      "Vrai score: 5\n",
-      "Score: 3.950550432383693\n",
-      "Séquences positives: ['Large choix de véhiculeContact agréable', 'conseils pertinents']\n",
+      "Query: Super conseil rapidité de reprise de mon véhicule et rapidité a avoir un véhicule neuf nous conseillons fortement Aramis\n",
+      "Vrai score: 3\n",
+      "Score: 3.5598636505876087\n",
+      "Séquences positives: ['Super conseil rapidité de reprise de mon véhicule', 'rapidité a avoir un véhicule neuf nous conseillons fortement Aramis']\n",
       "Séquences négatives: []\n"
      ]
     }
@@ -1721,22 +1736,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 608/608 [08:48<00:00,  1.15it/s]"
+      "100%|██████████| 608/608 [05:54<00:00,  1.71it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 0.7062562396006655\n",
-      "MSE: 0.7578698835274542\n"
+      "MAE: 0.8651315789473685\n",
+      "MSE: 1.2861842105263157\n"
      ]
     },
     {
@@ -1748,14 +1763,15 @@
     }
    ],
    "source": [
+    "# For bm25\n",
     "ratings_val = []\n",
     "exception_idx = []\n",
     "for i in tqdm(range(len(test))):\n",
     "    try:\n",
     "        elmt = test.iloc[i]\n",
     "        origin_query = elmt[\"review_text\"]\n",
-    "        score = estimate_score(getTopDocs(bm25, text2Token(origin_query), documents, ratings), origin_query)\n",
-    "        ratings_val.append(score[0])\n",
+    "        score = estimate_score(getTopDocs(bm25, text2Token(origin_query), documents, ratings))\n",
+    "        ratings_val.append(round(score[0]))\n",
     "    except:\n",
     "        exception_idx.append(i)\n",
     "        continue\n",
@@ -1764,6 +1780,197 @@
     "\n",
     "print(f\"MAE: {mean_absolute_error(test_sucess['review_rating'], ratings_val)}\")\n",
     "print(f\"MSE: {mean_squared_error(test_sucess['review_rating'], ratings_val)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 608/608 [03:58<00:00,  2.55it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 0.6788685524126455\n",
+      "MSE: 1.021630615640599\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For pipe\n",
+    "ratings_val = []\n",
+    "exception_idx = []\n",
+    "for i in tqdm(range(len(test))):\n",
+    "    try:\n",
+    "        elmt = test.iloc[i]\n",
+    "        origin_query = elmt[\"review_text\"]\n",
+    "        score = estimate_score(None, origin_query, use_bm25=False)\n",
+    "        ratings_val.append(round(score[0]))\n",
+    "    except:\n",
+    "        exception_idx.append(i)\n",
+    "        continue\n",
+    "\n",
+    "test_sucess = test.drop(exception_idx)\n",
+    "\n",
+    "print(f\"MAE: {mean_absolute_error(test_sucess['review_rating'], ratings_val)}\")\n",
+    "print(f\"MSE: {mean_squared_error(test_sucess['review_rating'], ratings_val)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 608/608 [10:01<00:00,  1.01it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 0.6821963394342762\n",
+      "MSE: 0.8685524126455907\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For bm25 + pipe\n",
+    "ratings_val = []\n",
+    "exception_idx = []\n",
+    "for i in tqdm(range(len(test))):\n",
+    "    try:\n",
+    "        elmt = test.iloc[i]\n",
+    "        origin_query = elmt[\"review_text\"]\n",
+    "        score = estimate_score(getTopDocs(bm25, text2Token(origin_query), documents, ratings), origin_query)\n",
+    "        ratings_val.append(round(score[0]))\n",
+    "    except:\n",
+    "        exception_idx.append(i)\n",
+    "        continue\n",
+    "\n",
+    "test_sucess = test.drop(exception_idx)\n",
+    "\n",
+    "print(f\"MAE: {mean_absolute_error(test_sucess['review_rating'], ratings_val)}\")\n",
+    "print(f\"MSE: {mean_squared_error(test_sucess['review_rating'], ratings_val)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get the topic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequents_vectors = pd.read_csv(\"wordsmost_frequent_with_vectors.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequents_vectors[\"embedding\"] = frequents_vectors[\"embedding\"].apply(lambda x: ast.literal_eval(re.sub(r',+', ',', x.replace(\" \", \",\").replace(\"\\n\", \",\")).replace(\"[,\", \"[\").replace(\",]\", \"]\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "euclidean_distances = lambda x, y: sum([abs(x[i] - y[i]) for i in range(len(x))])**1/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text2vector(text):\n",
+    "    all_vectors = [frequents_vectors[frequents_vectors[\"fr\"] == word].iloc[0][\"embedding\"] for word in text2Token(text, stem=False, use_n_grams=False) if word in frequents_vectors[\"fr\"].tolist()]\n",
+    "    return [sum([vector[i] for vector in all_vectors])/len(all_vectors) for i in range(len(all_vectors[0]))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 1: 11.621313425\n",
+      "Topic 2: 8.125361499999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "topic1 = \"probleme\"\n",
+    "topic2 = \"super qualité\"\n",
+    "\n",
+    "topic1_vector = text2vector(topic1)\n",
+    "topic2_vector = text2vector(topic2)\n",
+    "\n",
+    "text = \"produit de bonne qualité, je recommande\"\n",
+    "text_vector = text2vector(text)\n",
+    "\n",
+    "print(f\"Topic 1: {euclidean_distances(topic1_vector, text_vector)}\")\n",
+    "print(f\"Topic 2: {euclidean_distances(topic2_vector, text_vector)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 1: 9.328016499999999\n",
+      "Topic 2: 12.449311075\n"
+     ]
+    }
+   ],
+   "source": [
+    "text2 = \"panne\"\n",
+    "text2_vector = text2vector(text2)\n",
+    "\n",
+    "print(f\"Topic 1: {euclidean_distances(topic1_vector, text2_vector)}\")\n",
+    "print(f\"Topic 2: {euclidean_distances(topic2_vector, text2_vector)}\")"
    ]
   }
  ],
