--- a/app.ipynb
+++ b/app.ipynb
@@ -1699,17 +1699,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: Super conseil rapidité de reprise de mon véhicule et rapidité a avoir un véhicule neuf nous conseillons fortement Aramis\n",
-      "Vrai score: 3\n",
-      "Score: 3.5598636505876087\n",
-      "Séquences positives: ['Super conseil rapidité de reprise de mon véhicule', 'rapidité a avoir un véhicule neuf nous conseillons fortement Aramis']\n",
+      "Query: je suis satisfaite de mon achat j'étais hésitante au départ et tout c'est bien passé.il y a juste un point négatif, je croyais naïvement que l'on allait me livré la voiture avec un camion donc que j'allais la recevoir avec le kilométrage qui était sur le site et non c'est un prestataire qui à rouler 600 kms avec ma voiture pour me l'apporter donc pour moi je ne l'ai pas eu au kilométrage acheter.\n",
+      "Vrai score: 4\n",
+      "Score: 4.052476618230198\n",
+      "Séquences positives: [\"je croyais naïvement que l'on allait me livré la voiture avec un camion\", \"non c'est un prestataire qui à rouler 600 kms avec ma voiture pour me l'apporter\", \"tout c'est bien passé.il y a juste un point négatif,\", \"que j'allais la recevoir avec le kilométrage qui était sur le site\", \"pour moi je ne l'ai pas eu au kilométrage acheter.\"]\n",
       "Séquences négatives: []\n"
      ]
     }
@@ -1925,52 +1925,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 183,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Topic 1: 11.621313425\n",
-      "Topic 2: 8.125361499999999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "topic1 = \"probleme\"\n",
-    "topic2 = \"super qualité\"\n",
-    "\n",
-    "topic1_vector = text2vector(topic1)\n",
-    "topic2_vector = text2vector(topic2)\n",
-    "\n",
-    "text = \"produit de bonne qualité, je recommande\"\n",
-    "text_vector = text2vector(text)\n",
-    "\n",
-    "print(f\"Topic 1: {euclidean_distances(topic1_vector, text_vector)}\")\n",
-    "print(f\"Topic 2: {euclidean_distances(topic2_vector, text_vector)}\")"
+    "def getTopic(text):\n",
+    "    try:\n",
+    "        topic1 = \"mauvaise qualité\"\n",
+    "        topic2 = \"super qualité\"\n",
+    "        text_vector = text2vector(text)\n",
+    "        topic1_vector = text2vector(topic1)\n",
+    "        topic2_vector = text2vector(topic2)\n",
+    "        if euclidean_distances(topic1_vector, text_vector) < euclidean_distances(topic2_vector, text_vector):\n",
+    "            return topic1\n",
+    "        else:\n",
+    "            return topic2\n",
+    "    except:\n",
+    "        return \"Ne peut pas être déterminé\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 1: 9.328016499999999\n",
-      "Topic 2: 12.449311075\n"
+      "Query: Très bonne prestation de Lyon’s automobiles!  Je remercie Meline pour la qualité de son contact, sa disponibilité et sa réactivité.Le véhicule m’a été remis en état neuf et la qualité du travail ne trouve rien à redire !Encore merci!\n",
+      "Vrai score: 5\n",
+      "Thème: super qualité\n",
+      "Score: 4.0262544497772055\n",
+      "Séquences positives: ['Très bonne prestation de Lyon’s automobiles!', 'la qualité du travail ne trouve rien à redire !', 'sa disponibilité', 'Je remercie Meline pour la qualité de son contact,', 'sa réactivité.']\n",
+      "Séquences négatives: []\n"
      ]
     }
    ],
    "source": [
-    "text2 = \"panne\"\n",
-    "text2_vector = text2vector(text2)\n",
+    "elmt = test.iloc[random.randint(0, len(test))]\n",
+    "origin_query = elmt[\"review_text\"]\n",
+    "score, pos_list, neg_list = main(origin_query, use_bm25=True, use_pipe=False)\n",
     "\n",
-    "print(f\"Topic 1: {euclidean_distances(topic1_vector, text2_vector)}\")\n",
-    "print(f\"Topic 2: {euclidean_distances(topic2_vector, text2_vector)}\")"
+    "print(f\"Query: {origin_query}\")\n",
+    "print(f\"Vrai score: {elmt['review_rating']}\")\n",
+    "print(f\"Thème: {getTopic(origin_query)}\")\n",
+    "\n",
+    "print(f\"Score: {score[0]}\")\n",
+    "print(f\"Séquences positives: {pos_list}\")\n",
+    "print(f\"Séquences négatives: {neg_list}\")"
    ]
   }
  ],
