--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -287,15 +287,19 @@
     "\n",
     "n_grams = lambda tokens, n: [\" \".join(tokens[i:i+n]) for i in range(len(tokens)-n+1)]\n",
     "\n",
-    "def text2Token(text, spelling = True, stem = True, len_word_min = 2, spell = spell, useless_words = useless_words, use_n_grams = True):\n",
+    "def text2Token(text, spelling = True, stem = True, add_same_without_stem = False, len_word_min = 2, spell = spell, useless_words = useless_words, use_n_grams = True):\n",
     "    stopword = stopwords.words('french')\n",
     "    word_tokens = preprocess_text(text)\n",
     "    word_tokens = [word for word in word_tokens if word not in stopword and word not in useless_words and len(word) > len_word_min]\n",
     "    if spelling:\n",
     "        word_tokens = [spell.correction(word) for word in word_tokens]\n",
     "        word_tokens = [word for word in word_tokens if word != None]\n",
+    "    if add_same_without_stem:\n",
+    "        word_token_bis = word_tokens.copy()\n",
     "    if stem:\n",
     "        word_tokens = [STEMMER.stem(token) for token in word_tokens]\n",
+    "    if add_same_without_stem:\n",
+    "        word_tokens = word_tokens + word_token_bis\n",
     "    if use_n_grams:\n",
     "        word_tokens = word_tokens + n_grams(word_tokens, 2) + n_grams(word_tokens, 3)\n",
     "    return word_tokens\n",
@@ -1407,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1444,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1535,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1665,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1679,7 +1683,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,18 +1703,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: je suis satisfaite de mon achat j'étais hésitante au départ et tout c'est bien passé.il y a juste un point négatif, je croyais naïvement que l'on allait me livré la voiture avec un camion donc que j'allais la recevoir avec le kilométrage qui était sur le site et non c'est un prestataire qui à rouler 600 kms avec ma voiture pour me l'apporter donc pour moi je ne l'ai pas eu au kilométrage acheter.\n",
-      "Vrai score: 4\n",
-      "Score: 4.052476618230198\n",
-      "Séquences positives: [\"je croyais naïvement que l'on allait me livré la voiture avec un camion\", \"non c'est un prestataire qui à rouler 600 kms avec ma voiture pour me l'apporter\", \"tout c'est bien passé.il y a juste un point négatif,\", \"que j'allais la recevoir avec le kilométrage qui était sur le site\", \"pour moi je ne l'ai pas eu au kilométrage acheter.\"]\n",
-      "Séquences négatives: []\n"
+      "Query: Dossier avec anomalie mais évidemment, les explications ne sont pas claires, ce qui implique d'appeler (0,80€ la minute avec généralement 5 minutes d'attente). J'ai appelé ce matin et la conseillère m'a raccroché au nez ! Les personnes que nous avons au téléphone ne connaissent pas les dossiers, traités par des agents, mais ces derniers ne sont pas joignables directement (évidemment). Cela fait maintenant 3 mois que mon dossier traîne et pas un conseiller n'est capable de m'expliquer clairement ce qui coince... à fuir !\n",
+      "Vrai score: 1\n",
+      "Score: 2.397960967295189\n",
+      "Séquences positives: []\n",
+      "Séquences négatives: [\"ce qui implique d'appeler (0,80€ la minute avec généralement 5 minutes d'attente).\", 'Cela fait maintenant 3 mois que mon dossier traîne', \"J'ai appelé ce matin\", 'Les personnes que nous avons au téléphone ne connaissent pas les dossiers,', \"la conseillère m'a raccroché au nez !\"]\n"
      ]
     }
    ],
@@ -1887,20 +1891,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frequents_vectors = pd.read_csv(\"wordsmost_frequent_with_vectors.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frequents_vectors[\"embedding\"] = frequents_vectors[\"embedding\"].apply(lambda x: ast.literal_eval(re.sub(r',+', ',', x.replace(\" \", \",\").replace(\"\\n\", \",\")).replace(\"[,\", \"[\").replace(\",]\", \"]\")))"
+    "from scipy.spatial.distance import cosine"
    ]
   },
   {
@@ -1909,71 +1904,92 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "euclidean_distances = lambda x, y: sum([abs(x[i] - y[i]) for i in range(len(x))])**1/2"
+    "frequents_vectors = pd.read_csv(\"wordsmost_frequent_with_vectors.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequents_vectors[\"embedding\"] = frequents_vectors[\"embedding\"].apply(lambda x: ast.literal_eval(re.sub(r',+', ',', x.replace(\" \", \",\").replace(\"\\n\", \",\")).replace(\"[,\", \"[\").replace(\",]\", \"]\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
     "def text2vector(text):\n",
-    "    all_vectors = [frequents_vectors[frequents_vectors[\"fr\"] == word].iloc[0][\"embedding\"] for word in text2Token(text, stem=False, use_n_grams=False) if word in frequents_vectors[\"fr\"].tolist()]\n",
-    "    return [sum([vector[i] for vector in all_vectors])/len(all_vectors) for i in range(len(all_vectors[0]))]"
+    "    idx_to_inverse = []\n",
+    "    tokens = text2Token(text, use_n_grams=False, add_same_without_stem=True)\n",
+    "    for keywords_inverse in [\"aucun\", \"ni\", \"pas\", \"manque\"]:\n",
+    "        for keyword_inverse in [STEMMER.stem(keywords_inverse), keywords_inverse]:\n",
+    "            while keyword_inverse in tokens:\n",
+    "                idx = tokens.index(keyword_inverse)\n",
+    "                idx_to_inverse.append(tokens[idx + 1])\n",
+    "                tokens[idx] += \"_\"\n",
+    "\n",
+    "    for idx in idx_to_inverse:\n",
+    "        tokens[idx - 1] = tokens[idx - 1][:-1]\n",
+    "\n",
+    "    all_vectors = [frequents_vectors[frequents_vectors[\"fr\"] == word].iloc[0][\"embedding\"] for word in tokens if word in frequents_vectors[\"fr\"].tolist()]\n",
+    "\n",
+    "    for idx in idx_to_inverse:\n",
+    "        if len(all_vectors) > idx:\n",
+    "            all_vectors[idx] = [-elmt for elmt in all_vectors[idx]]\n",
+    "\n",
+    "    return [sum([vector[i] for vector in all_vectors]) for i in range(len(all_vectors[0]))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getTopic(text):\n",
     "    try:\n",
-    "        topic1 = \"mauvaise qualité\"\n",
-    "        topic2 = \"super qualité\"\n",
+    "        topics_full_name = [\"Relatif au temps\", \"Relatif à la qualité\", \"Relatif au prix\", \"Relatif au service client\"]\n",
+    "        topics = [\"rapidité vitesse lenteur retard\", \"panne bug qualité performance\", \"cher marché prix\", \"service client\"]\n",
+    "        topics_vectors = [text2vector(topic) for topic in topics]\n",
     "        text_vector = text2vector(text)\n",
-    "        topic1_vector = text2vector(topic1)\n",
-    "        topic2_vector = text2vector(topic2)\n",
-    "        if euclidean_distances(topic1_vector, text_vector) < euclidean_distances(topic2_vector, text_vector):\n",
-    "            return topic1\n",
-    "        else:\n",
-    "            return topic2\n",
+    "        best_topic = topics_full_name[0]\n",
+    "        best_score = 1 - cosine(topics_vectors[0], text_vector)\n",
+    "        for i in range(1, len(topics)):\n",
+    "            score = 1 - cosine(topics_vectors[i], text_vector)\n",
+    "            if score > best_score:\n",
+    "                best_score = score\n",
+    "                best_topic = topics_full_name[i]\n",
+    "        return best_topic\n",
     "    except:\n",
     "        return \"Ne peut pas être déterminé\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: Très bonne prestation de Lyon’s automobiles!  Je remercie Meline pour la qualité de son contact, sa disponibilité et sa réactivité.Le véhicule m’a été remis en état neuf et la qualité du travail ne trouve rien à redire !Encore merci!\n",
-      "Vrai score: 5\n",
-      "Thème: super qualité\n",
-      "Score: 4.0262544497772055\n",
-      "Séquences positives: ['Très bonne prestation de Lyon’s automobiles!', 'la qualité du travail ne trouve rien à redire !', 'sa disponibilité', 'Je remercie Meline pour la qualité de son contact,', 'sa réactivité.']\n",
-      "Séquences négatives: []\n"
+      "Query: a fuir, vous mène en bateau pendant plus d'un mois pour la livraison d'une voiture qui n'aura jamais lieu alors que je l'avais payé comptant plus d'un mois avant, lamentable, je ne sais meme pas si je vais pouvoir me faire rembourser!!!\n",
+      "Vrai score: 1\n",
+      "Thème: Relatif à la qualité\n"
      ]
     }
    ],
    "source": [
     "elmt = test.iloc[random.randint(0, len(test))]\n",
     "origin_query = elmt[\"review_text\"]\n",
-    "score, pos_list, neg_list = main(origin_query, use_bm25=True, use_pipe=False)\n",
     "\n",
     "print(f\"Query: {origin_query}\")\n",
     "print(f\"Vrai score: {elmt['review_rating']}\")\n",
-    "print(f\"Thème: {getTopic(origin_query)}\")\n",
-    "\n",
-    "print(f\"Score: {score[0]}\")\n",
-    "print(f\"Séquences positives: {pos_list}\")\n",
-    "print(f\"Séquences négatives: {neg_list}\")"
+    "print(f\"Thème: {getTopic(origin_query)}\")"
    ]
   }
  ],
